fixed margins in blog section but may wrap cards in wrapper

--- a/src/styles/blocks/blog.scss
+++ b/src/styles/blocks/blog.scss
@@ -3,6 +3,16 @@
   flex-direction: column;
   gap: clamp(3.5rem, 17.5vw, 5rem);
 
+  &__card {
+    &:not(:last-child) {
+      margin-bottom: clamp(3.5rem, 17.5vw, 5rem);
+      
+      @include onTablet {
+        margin: 0;
+      }
+    }
+  }
+
   &__title {
     @include headingsH2;
     color: $accent-orange;
